--- a/docs/style.css
+++ b/docs/style.css
@@ -96,7 +96,7 @@ body
 
 h1 { font-size: 2.2rem; font-weight: bold; font-variation-settings: "wght" 500 }
 
-#welcome-grid { display: grid; grid-template-columns: repeat(6, 6.6rem); grid-auto-rows: 12rem; gap: 1rem .5rem; margin: 12rem 0 12rem 0 }
+#welcome-grid { display: grid; grid-template-columns: repeat(6, 6.6rem); grid-auto-rows: 12rem; gap: 1rem .5rem; margin: 7rem 0 7rem 0 }
 .img-container { width: auto; overflow: hidden; display: flex; justify-content: center;}
 .img-container img { height: 100%; max-width: unset; justify-self: center }
 .img-container { transition: scale ease 0.2s }
@@ -158,7 +158,7 @@ nav summary
 	{ list-style: none
 	; user-select: none
 	}
-nav summary::before { content: "\200B" }
+nav summary::marker { content: "" }
 
 nav summary:hover, nav details[open] summary { font-style: italic }
 
