--- a/docs/style.css
+++ b/docs/style.css
@@ -118,8 +118,7 @@ a
 	; color: var(--main-text-color)
 	}
 
-#about-pictures-a, #about-pictures-b { padding: 0 1rem 0 1rem }
-#about-pictures-b { display: grid; grid-template-columns: 1fr 1fr }
+#about-pictures { padding: 0 1rem 0 1rem; display: grid; grid-template-columns: 1fr 1fr }
 
 h1 { position: relative }
 
