--- a/docs/style.css
+++ b/docs/style.css
@@ -102,8 +102,10 @@ body
 nav details li
 	{ font-family: modern-font-haha, monospace
 	; font-variation-settings: "wght" 350
-	; font-size: 0.8rem
+	; font-size: 0.9rem
 	; margin-left: 0.5rem
+	; text-indent: -1.6em;
+	; padding-left: 1.6em
 	}
 
 .story
