--- a/site.css
+++ b/site.css
@@ -108,6 +108,15 @@ nav details li
 	; padding-left: 1.6em
 	}
 
+#search
+	{ border: none
+	; background-color: rgba(0,0,0,0)
+	; border-bottom: 1px solid #aaa
+	; padding: .5rem
+	; font-family: 'Times New Roman'
+	; font-style: italic
+	}
+
 .story
 	{ font-size: 12pt
 	; line-height: 2
