--- a/site.css
+++ b/site.css
@@ -78,7 +78,7 @@ h2 { font-size: 2rem }
 	; --idk-color: #f58ea9
 	; --main-bg-color: #ededed
 	; font-family: freight, serif
-	; background-image: url(bg.jpg)
+	; background-image: url(stuff/bg.jpg)
 	; background-size: contain
 	}
 
